--- a/assignment/src/App.css
+++ b/assignment/src/App.css
@@ -228,3 +228,15 @@ font-size: 16px;
   font-weight: normal;
 }
 
+.colorss{
+  color: rgb(75, 127, 177) !important;
+}
+
+.linee{
+  height: 5px !important;
+  width: 55px !important;
+  background-color: #0f0e0e;
+  align-self: center !important;
+  justify-self: center !important;
+}
+
