--- a/assign1/src/App.css
+++ b/assign1/src/App.css
@@ -65,3 +65,14 @@
     padding: 10px;
   }
 
+  /* envelope */
+  .env{
+    position: relative;
+    margin-top: 5em;
+  }
+
+  .whitee{
+    position: absolute;
+     background: orchid;
+  }
+
