--- a/assign1/src/App.css
+++ b/assign1/src/App.css
@@ -89,6 +89,16 @@
     
   }
 
+
+  .card-style6{
+    background: #FFFFFF;
+    box-shadow: 0px 5px 20px rgba(14, 13, 13, 0.438) !important;
+    border-radius: 13px 13px 13px 13px !important;
+    width: 345px !important;
+    left: 30px;
+    height: 220px;
+  }
+
   /* dropdown */
 .slide-enter {
   transform: translateY(-50px);
@@ -112,6 +122,7 @@
 }
 
 
+
 .btn-style1{
   background: #FFED62 !important;
   border: 0px !important;
@@ -126,6 +137,18 @@
   font-size: 23px !important;
   font-weight: bolder !important;
   color: black !important;
+}
+
+
+/* dates */
+.date-selection{
+  box-shadow: 0px 5px 20px rgba(14, 13, 13, 0.438) !important;
+  background: #FEEC61 !important;
+  color: black !important;
+  border: 0px !important;
+  border-radius: 13px !important;
+  height: 75px !important;
+  width: 120px !important;
 }
 
 
